--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -20,6 +20,7 @@
       <span onpointerup="console.log(event.type)">Pointerup</span>
       <span onpointerenter="console.log(event.type)">Pointerenter</span>
       <span onpointerleave="console.log(event.type)">Pointerleave</span>
+      <span onpointermove="console.log(event.type)">Pointermove</span>
     </div>
 
     <script>
