--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -23,6 +23,8 @@
       <span onpointermove="console.log(event.type)">Pointermove</span>
     </div>
 
+    <h3>Pointer event properties</h3>
+
     <script>
       console.log("Ola, tudo bem?");
     </script>
