--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -25,6 +25,8 @@
 
     <h3>Pointer event properties</h3>
 
+    <span>Properties</span>
+
     <script>
       console.log("Ola, tudo bem?");
     </script>
