--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -31,7 +31,7 @@
       const properties = document.getElementById("properties");
 
       properties.onpointerdown = function(e) {
-        console.log(e.type);
+        console.log("pointerId", e.pointerId);
       };
     </script>
   </body>
