--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -32,6 +32,7 @@
 
       properties.onpointerdown = function(e) {
         console.log("pointerId", e.pointerId);
+        console.log("pointerType", e.pointerType);
       };
     </script>
   </body>
