--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -33,6 +33,8 @@
       properties.onpointerdown = function(e) {
         console.log("pointerId", e.pointerId);
         console.log("pointerType", e.pointerType);
+        console.log("isPrimary", e.isPrimary);
+        console.log("width", e.width);
       };
     </script>
   </body>
