--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -35,6 +35,7 @@
         console.log("pointerType", e.pointerType);
         console.log("isPrimary", e.isPrimary);
         console.log("width", e.width);
+        console.log("height", e.height);
       };
     </script>
   </body>
