--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -30,13 +30,14 @@
     <script>
       const properties = document.getElementById("properties");
 
-      properties.onpointerover = function(e) {
+      properties.onpointerdown = function(e) {
         console.log("pointerId", e.pointerId);
         console.log("pointerType", e.pointerType);
         console.log("isPrimary", e.isPrimary);
         console.log("width", e.width);
         console.log("height", e.height);
         console.log("pressure", e.pressure);
+        console.log("tangentialPressure", e.tangentialPressure);
       };
     </script>
   </body>
