--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -38,6 +38,8 @@
         console.log("height", e.height);
         console.log("pressure", e.pressure);
         console.log("tangentialPressure", e.tangentialPressure);
+        console.log("tiltX", e.tiltX);
+        console.log("tiltY", e.tiltY);
       };
     </script>
   </body>
