--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -40,6 +40,7 @@
         console.log("tangentialPressure", e.tangentialPressure);
         console.log("tiltX", e.tiltX);
         console.log("tiltY", e.tiltY);
+        console.log("twist", e.twist);
       };
     </script>
   </body>
