--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -27,6 +27,8 @@
 
     <span id="properties">Properties</span>
 
+    <h3>Multi touch</h3>
+
     <script>
       const properties = document.getElementById("properties");
 
