--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -29,6 +29,10 @@
       background: blue;
       cursor: pointer;
     }
+
+    .border {
+      border: 1px solid gray;
+    }
   </style>
   <body>
     <h2>Pointer events</h2>
@@ -53,6 +57,8 @@
     <div id="slider" class="slider">
       <div class="thumb"></div>
     </div>
+
+    <p class="border">Mouse over here to see the date</p>
 
     <script>
       const properties = document.getElementById("properties");
