--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -58,7 +58,7 @@
       <div class="thumb"></div>
     </div>
 
-    <p class="border">Mouse over here to see the date</p>
+    <p class="border" onpointerover="this.textContent=new Date()">Mouse over here to see the date</p>
 
     <script>
       const properties = document.getElementById("properties");
