Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
@@ -4,6 +4,10 @@
     <title>Teststand</title>
   </head>
   <body>
+    <form onsubmit="return false;">
+      
+    </form>
+    
     <script>
       console.log("Ola");
     </script>
