Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
@@ -5,9 +5,13 @@
   </head>
   <body>
     <form onsubmit="return false;">
-      
+      Prevent default for:
+
+      <label>
+        <input type="checkbox" name="keydownStop" value="1"> keydown
+      </label>
     </form>
-    
+
     <script>
       console.log("Ola");
     </script>
