Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
@@ -10,6 +10,12 @@
       <label>
         <input type="checkbox" name="keydownStop" value="1"> keydown
       </label>
+
+      &nbsp;&nbsp;&nbsp;
+
+      <label>
+        <input type="checkbox" name="keyupStop" value="1"> keyup
+      </label>
     </form>
 
     <script>
