Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
@@ -21,7 +21,13 @@
         <label>
           <input type="checkbox" name="keydownIgnore" value="1"> keydown
         </label>
+        &nbsp;&nbsp;&nbsp;
+        <label>
+          <input type="checkbox" name="keyupIgnore" value="1"> keyup
+        </label>
       </p>
+
+      <p>Focus on the input field and press a key.</p>
     </form>
 
     <script>
