Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
@@ -28,6 +28,10 @@
       </p>
 
       <p>Focus on the input field and press a key.</p>
+
+      <input type="text" placeholder="Press keys here" id="keyinput">
+
+      <textarea id="textarea" readonly></textarea>
     </form>
 
     <script>
