Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
@@ -32,6 +32,8 @@
       <input type="text" placeholder="Press keys here" id="keyinput">
 
       <textarea id="textarea" readonly></textarea>
+
+      <input type="button" value="Clear" onclick="textarea.value = '';">
     </form>
 
     <script>
