Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
@@ -2,6 +2,14 @@
 <html>
   <head>
     <title>Teststand</title>
+
+    <style>
+      #keyinput {
+        font-size: 150%;
+        box-sizing: border-box;
+        width: 95%;
+      }
+    </style>
   </head>
   <body>
     <form onsubmit="return false;">
