--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
@@ -9,6 +9,14 @@
         box-sizing: border-box;
         width: 95%;
       }
+
+      #textarea {
+        width: 95%;
+        box-sizing: border-box;
+        height: 250px;
+        border: 1px solid black;
+        display: block;
+      }
     </style>
   </head>
   <body>
