--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
@@ -17,6 +17,11 @@
         border: 1px solid black;
         display: block;
       }
+
+      form label {
+        display: inline;
+        white-space: nowrap;
+      }
     </style>
   </head>
   <body>
