Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
@@ -58,7 +58,8 @@
     </form>
 
     <script>
-      console.log("Ola");
+      const keyInput = document.getElementById("keyinput");
+      console.log(keyInput);
     </script>
   </body>
 </html>
