--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
@@ -59,7 +59,12 @@
 
     <script>
       const keyInput = document.getElementById("keyinput");
-      console.log(keyInput);
+
+      let lastTime = Date.now();
+      
+      keyInput.onkeydown = keyInput.onkeyup = keyInput.onkeypress = function(e) {
+
+      };
     </script>
   </body>
 </html>
