Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
@@ -59,11 +59,12 @@
 
     <script>
       const keyInput = document.getElementById("keyinput");
+      const form = document.querySelector("form");
 
       let lastTime = Date.now();
       
       keyInput.onkeydown = keyInput.onkeyup = keyInput.onkeypress = function(e) {
-
+        console.log(form)
       };
     </script>
   </body>
