Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
@@ -64,7 +64,10 @@
       let lastTime = Date.now();
       
       keyInput.onkeydown = keyInput.onkeyup = keyInput.onkeypress = function(e) {
-        console.log(form)
+        if (form.elements[e.type + "Ignore"]?.checked) {
+          console.log("oal")
+          // console.log(form.elements[e.type + "Ignore"].checked);
+        }
       };
     </script>
   </body>
