Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
@@ -65,8 +65,7 @@
       
       keyInput.onkeydown = keyInput.onkeyup = keyInput.onkeypress = function(e) {
         if (form.elements[e.type + "Ignore"]?.checked) {
-          console.log("oal")
-          // console.log(form.elements[e.type + "Ignore"].checked);
+          return;
         }
       };
     </script>
