Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
@@ -81,7 +81,9 @@
           (e.repeat ? " (repeat)" : "") +
           "\n";
 
-        
+        if (textarea.value && Date.now() - lastTime > 250) {
+          textarea.value += new Array(81).join("-") + "\n";
+        }
       };
     </script>
   </body>
