Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/teststand.html
@@ -84,6 +84,14 @@
         if (textarea.value && Date.now() - lastTime > 250) {
           textarea.value += new Array(81).join("-") + "\n";
         }
+
+        lastTime = Date.now();
+
+        textarea.value += text;
+
+        if (form.elements[e.type + "Stop"].checked) {
+          e.preventDefault();
+        }
       };
     </script>
   </body>
