Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <h2>Keydown and keyup</h2>
     <script>
-      console.log("Ola, tudo bem?");
+      document.onkeydown = function() {
+        console.log("keydown");
+      }
+
+      document.onkeyup = function() {
+        console.log("keyup");
+      }
     </script>
   </body>
 </html>
