Keyboad: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/index.html
@@ -6,10 +6,10 @@
       document.onkeydown = function(e) {
         console.log("key", e.key);
         console.log("code", e.code);
-      }
 
-      document.onkeyup = function() {
-        console.log("keyup");
+        if (e.code === "KeyZ" && (e.ctrlKey || e.metaKey)) {
+          console.log("Undo");
+        }
       }
     </script>
   </body>
