Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/index.html
@@ -7,6 +7,7 @@
       document.onkeydown = function(e) {
         console.log("key", e.key);
         console.log("code", e.code);
+        console.log("repeat", e.repeat);
 
         if (e.code === "KeyZ" && (e.ctrlKey || e.metaKey)) {
           console.log("Undo");
