keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/index.html
@@ -3,6 +3,7 @@
   <body>
     <h2>Keydown and keyup</h2>
     <h2>Auto-repeat</h2>
+    <h2>Default actions</h2>
     <script>
       document.onkeydown = function(e) {
         console.log("key", e.key);
