--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/index.html
@@ -4,6 +4,8 @@
     <h2>Keydown and keyup</h2>
     <h2>Auto-repeat</h2>
     <h2>Default actions</h2>
+
+    <input type="tel" placeholder="Phone, please" id="phone">
     <script>
       document.onkeydown = function(e) {
         console.log("key", e.key);
@@ -13,6 +15,10 @@
         if (e.code === "KeyZ" && (e.ctrlKey || e.metaKey)) {
           console.log("Undo");
         }
+      }
+
+      function checkPhoneKey(key) {
+        return (key >= "0" && key <= "9") || ["+","(",")","-"].includes(key);
       }
     </script>
   </body>
