Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/index.html
@@ -18,7 +18,7 @@
       }
 
       function checkPhoneKey(key) {
-        return (key >= "0" && key <= "9") || ["+","(",")","-"].includes(key);
+        return (key >= "0" && key <= "9") || ["+","(",")","-", "ArrowLeft", "ArrowRight", "Delete", "Backspace"].includes(key);
       }
     </script>
   </body>
