Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/index.html
@@ -11,6 +11,8 @@
       placeholder="Phone, please" id="phone"
       oninput="console.log(this.value);"
     >
+
+    <h2>Legacy</h2>
     <script>
       document.onkeydown = function(e) {
         console.log("key", e.key);
