Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/index.html
@@ -13,6 +13,12 @@
     >
 
     <h2>Legacy</h2>
+    <p style="display: flex;">
+      <span style="background-color: lightcoral; margin: 4px;">keypress</span>
+      <span style="background-color: lightcoral; margin: 4px;">keyCode</span>
+      <span style="background-color: lightcoral; margin: 4px;">charCode</span>
+      <span style="background-color: lightcoral; margin: 4px;">which</span>
+    </p>
     <script>
       document.onkeydown = function(e) {
         console.log("key", e.key);
