Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/tasks/extended-hotkeys.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/tasks/extended-hotkeys.html
@@ -15,7 +15,7 @@
 
       runOnKeys(function() {
         console.log("Hello!");
-      });
+      }, "KeyQ", "KeyW");
     </script>
   </body>
 </html>
