Keyboard: keydown and keyup

--- a/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/tasks/extended-hotkeys.html
+++ b/part-2-browser-document-events-interfaces/ui-events/keyboard-keydown-keyup/tasks/extended-hotkeys.html
@@ -11,6 +11,10 @@
           pressed.add(e.code);
           console.log(pressed);
         });
+
+        document.addEventListener("keyup", function(e) {
+          pressed.delete(e.code);
+        });
       }
 
       runOnKeys(function() {
