--- a/part-2-browser-document-events-interfaces/ui-events/scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/scrolling/index.html
@@ -19,7 +19,7 @@
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia eveniet a doloremque quaerat odio, optio ut. Ducimus iure eaque maiores minima exercitationem. Earum hic consequatur et fugiat itaque debitis dicta?
     </p>
 
-    <p id="showScroll"></p>
+    <p>Current Scroll: <span id="showScroll"></span></p>
 
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa hic id iure tenetur repudiandae quisquam vero ea dolor, ad omnis, veniam in. Provident dolorum nisi sequi harum vitae omnis aliquid?
@@ -55,7 +55,9 @@
 
     <script>
       const elem = document.getElementById("showScroll");
-      console.log(elem)
+      window.addEventListener("scroll", function() {
+        elem.innerHTML = window.scrollY + "px";
+      });
     </script>
   </body>
 </html>
