--- a/part-2-browser-document-events-interfaces/ui-events/scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/scrolling/index.html
@@ -11,6 +11,8 @@
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia eveniet a doloremque quaerat odio, optio ut. Ducimus iure eaque maiores minima exercitationem. Earum hic consequatur et fugiat itaque debitis dicta?
     </p>
 
+    <h2>Prevent scrolling</h2>
+
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa hic id iure tenetur repudiandae quisquam vero ea dolor, ad omnis, veniam in. Provident dolorum nisi sequi harum vitae omnis aliquid?
     </p>
