--- a/part-2-browser-document-events-interfaces/ui-events/scrolling/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/scrolling/index.html
@@ -60,6 +60,13 @@
       window.addEventListener("scroll", function() {
         elem.innerHTML = window.scrollY + "px";
       });
+
+      document.addEventListener("keydown", function(e) {
+        if (e.code !== "ArrowDown" && e.code !== "ArrowUp") {
+          return;
+        }
+        e.preventDefault();
+      });
     </script>
   </body>
 </html>
