--- a/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/endless-page.html
+++ b/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/endless-page.html
@@ -10,7 +10,7 @@
           const windowHeight = document.documentElement.clientHeight;
 
           if (windowRelativeBottom > windowHeight + 100) {
-            return;
+            break;
           }
           const date = `<p>Date: ${new Date()}</p>`;
           document.body.insertAdjacentHTML("beforeend", date);
