--- a/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/up-down-button.html
+++ b/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/up-down-button.html
@@ -2,7 +2,33 @@
 <html>
   <head>
     <style>
+      html, body {
+        height: 100%;
+        width: 100%;
+        padding: 0;
+        margin: 0;
+      }
 
+      #matrix {
+        width: 400px;
+        margin: auto;
+        overflow: auto;
+        text-align: justify;
+      }
+
+      #arrowTop {
+        height: 9px;
+        width: 14px;
+        color: green;
+        position: fixed;
+        top: 10px;
+        left: 10px;
+        cursor: pointer;
+      }
+
+      #arrowTop::before {
+        content: "▲";
+      }
     </style>
   </head>
   <body>
