--- a/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/up-down-button.html
+++ b/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/up-down-button.html
@@ -32,6 +32,12 @@
     </style>
   </head>
   <body>
-    
+    <div id="matrix">
+      <script>
+        for (let i = 0; i < 2000; i++) {
+          document.writeln(i);
+        }
+      </script>
+    </div>
   </body>
 </html>
