--- a/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
+++ b/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <p>
+      Text and pictures are from https://wikipedia.org.
+    </p>
+
+    <h3>
+      All images with <code>data-src</code> load when become visible.
+    </h3>
+
+    <h1>Solar system</h1>
     <script>
       console.log("Ola, tudo bem?");
     </script>
