--- a/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
+++ b/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
@@ -10,6 +10,39 @@
     </h3>
 
     <h1>Solar system</h1>
+
+    <p>
+      The Solar System is the gravitationally bound system comprising the Sun and the objects that
+      orbit it, either directly or indirectly. Of those objects that orbit the Sun directly,
+      the largest eight are the planets, with the remainder being significantly smaller objects,
+      such as dwarf planets and small Solar System bodies.
+      Of the objects that orbit the Sun indirectly, the moons,
+      two are larger than the smallest planet, Mercury.
+    </p>
+
+    <p>
+      The Solar System formed 4.6 billion years ago from the gravitational collapse of a giant
+      interstellar molecular cloud. The vast majority of the system's mass is in the Sun, with most
+      of the remaining mass contained in Jupiter. The four smaller inner planets, Mercury, Venus,
+      Earth and Mars, are terrestrial planets, being primarily composed of rock and metal.
+      The four outer planets are giant planets, being substantially more massive than the terrestrials.
+      The two largest, Jupiter and Saturn, are gas giants, being composed mainly of hydrogen and helium;
+      the two outermost planets, Uranus and Neptune, are ice giants,
+      being composed mostly of substances with relatively high melting points compared with hydrogen
+      and helium, called volatiles, such as water, ammonia and methane.
+      All planets have almost circular orbits that lie within a nearly flat disc called the ecliptic.
+    </p>
+
+    <figure>
+      <img 
+        src="placeholder.svg" 
+        alt="Image" 
+        data-src="https://en.js.cx/clipart/solar/sun.jpg"
+        width="658"
+        height="658"
+      >
+    </figure>
+    
     <script>
       console.log("Ola, tudo bem?");
     </script>
