--- a/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
+++ b/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
@@ -42,7 +42,30 @@
         height="658"
       >
     </figure>
-    
+
+    <h1>Mercury</h1>
+
+    <p>
+      Mercury (0.4 AU from the Sun) is the closest planet to the Sun and the smallest planet
+      in the Solar System (0.055 Earth masses).
+      Mercury has no natural satellites; besides impact craters, its only known geological features
+      are lobed ridges or rupes that were probably produced by a period of contraction early in
+      its history.[67] Mercury's very tenuous atmosphere consists of atoms blasted off its
+      surface by the solar wind.[68] Its relatively large iron core and thin mantle have not yet
+      been adequately explained. Hypotheses include that its outer layers were stripped off by a
+      giant impact; or, that it was prevented from fully accreting by the young Sun's energy.
+    </p>
+
+    <figure>
+      <img 
+        src="placeholder.svg" 
+        alt="Image" 
+        width="390"
+        height="390"
+        data-src="https://en.js.cx/clipart/solar/mercury.jpg"
+      >
+    </figure>
+
     <script>
       console.log("Ola, tudo bem?");
     </script>
