--- a/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
+++ b/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
@@ -66,6 +66,29 @@
       >
     </figure>
 
+    <h1>Venus</h1>
+
+    <p>
+      Venus (0.7 AU from the Sun) is close in size to Earth (0.815 Earth masses) and, like Earth,
+      has a thick silicate mantle around an iron core, a substantial atmosphere, and evidence of
+      internal geological activity. It is much drier than Earth, and its atmosphere is ninety times
+        as dense. Venus has no natural satellites. It is the hottest planet, with surface temperatures
+        over 400 °C (752°F), most likely due to the amount of greenhouse gases in the atmosphere.
+      No definitive evidence of current geological activity has been detected on Venus,
+      but it has no magnetic field that would prevent depletion of its substantial atmosphere,
+        which suggests that its atmosphere is being replenished by volcanic eruptions.
+    </p>
+
+    <figure>
+      <img 
+        src="placeholder.svg" 
+        alt="Image"
+        data-src="https://en.js.cx/clipart/solar/venus.jpg"
+        width="390"
+        height="390"
+      >
+    </figure>
+
     <script>
       console.log("Ola, tudo bem?");
     </script>
