--- a/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
+++ b/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
@@ -89,6 +89,29 @@
       >
     </figure>
 
+    <h1>Earth</h1>
+
+    <p>
+      Earth (1 AU from the Sun) is the largest and densest of the inner planets,
+      the only one known to have current geological activity, and the only place where life
+      is known to exist. Its liquid hydrosphere is unique among the terrestrial planets,
+      and it is the only planet where plate tectonics has been observed.
+      Earth's atmosphere is radically different from those of the other planets,
+      having been altered by the presence of life to contain 21% free oxygen.
+      It has one natural satellite, the Moon, the only large satellite of a terrestrial planet
+      in the Solar System.
+    </p>
+
+    <figure>
+      <img 
+        src="placeholder.svg" 
+        alt="Image"
+        data-src="https://en.js.cx/clipart/solar/earth.jpg"
+        width="390"
+        height="390"
+      >
+    </figure>
+
     <script>
       console.log("Ola, tudo bem?");
     </script>
