--- a/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
+++ b/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
@@ -112,6 +112,28 @@
       >
     </figure>
 
+    <h1>Mars</h1>
+
+    <p>
+      Mars (1.5 AU from the Sun) is smaller than Earth and Venus (0.107 Earth masses).
+      It has an atmosphere of mostly carbon dioxide with a surface pressure of 6.1 millibars
+      (roughly 0.6% of that of Earth). Its surface, peppered with vast volcanoes,
+      such as Olympus Mons, and rift valleys, such as Valles Marineris, shows geological
+      activity that may have persisted until as recently as 2 million years ago.
+      Its red colour comes from iron oxide (rust) in its soil.
+        Mars has two tiny natural satellites (Deimos and Phobos) thought to be captured asteroids.
+    </p>
+
+    <figure>
+      <img 
+        src="placeholder.svg" 
+        alt="Image"
+        data-src="https://en.js.cx/clipart/solar/mars.jpg"
+        width="390"
+        height="390"
+      >
+    </figure>
+
     <script>
       console.log("Ola, tudo bem?");
     </script>
